<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">친구</string>
    <string name="title_section2">채팅</string>
    <string name="title_section3">일정</string>
    <string name="schedule_register">일정추가</string>
    <string name="message_input_hint">메세지를 입력하세요.</string>
    <string name="title_activity_schedule_register">ScheduleRegisterActivity</string>
    <string name="attendance">참석</string>
    <string name="absence">불참</string>
    <string name="schedule_modify">수정</string>
    <string name="schedule_remove">삭제</string>
    <string name="str_change">변경</string>
    <string name="participant_choice">참석자 선택</string>
    <string name="title_label">제목</string>
    <string name="content_label">내용</string>
    <string name="date_label">날짜</string>
    <string name="time_label">시간</string>
    <string name="title_input_hint">제목을 입력하세요.</string>
    <string name="cotent_input_hint">내용을 입력하세요.</string>
    <string name="participant_choice_text">참석자를 선택하세요.</string>
    <string name="positive_button_text">확인</string>
    <string name="negative_button_text">취소</string>
    <string name="schedule_register_success">새로운 일정을 추가하였습니다.</string>
    <string name="schedule_update_success">일정을 수정하였습니다.</string>
    <string name="show_participant">참석자 확인</string>
    <string name="title_activity_participant_list">ParticipantListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_update_schedule">UpdateSchedule</string>
    <string name="UpdateButton">수정 완료</string>
    <string name="str_done">완료</string>
    <string name="title_activity_naver_map">NaverMapActivity</string>
    <string name="location_choice">장소 선택</string>
    <string name="selected_participant_hint">참석자를 선택해 주세요</string>
    <string name="detail_address_hint">상세주소를 입력하세요.</string>
    <string name="title_activity_user_register">UserRegisterActivity</string>
    <string name="user_name_input_hint">사용자 이름을 입력하세요.</string>
    <string name="user_phone_input_hint">전화번호를 입력하세요.</string>
    <string name="add_user">새로 등록되었습니다.</string>

</resources>
