<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UpdateSchedule" >

    <TextView
        android:id="@+id/updateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label" />

    <EditText
        android:id="@+id/updateTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_input_hint" />

    <TextView
        android:id="@+id/updateContentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_label" />

    <EditText
        android:id="@+id/updateContentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cotent_input_hint" />

    <TextView
        android:id="@+id/updateDateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_label" />

    <TextView
        android:id="@+id/updateDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/updatedateChangeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_change" />

    <TextView
        android:id="@+id/updateTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_label" />

    <TextView
        android:id="@+id/updateTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/updatetimeChangeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_change" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UpdateButton" />

</LinearLayout>
