<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScheduleRegisterActivity" >

    <TextView
        android:id="@+id/scheduleRegisterTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label" />

    <EditText
        android:id="@+id/scheduleRegisterTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_input_hint" />

    <TextView
        android:id="@+id/scheduleRegisterContentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_label" />

    <EditText
        android:id="@+id/scheduleRegisterContentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cotent_input_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/scheduleRegisterDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label" />

        <TextView
            android:id="@+id/scheduleRegisterDateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/dateChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_change" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/scheduleRegisterTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label" />

        <TextView
            android:id="@+id/scheduleRegisterTimeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/timeChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_change" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/locationChoiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_choice" />

    </LinearLayout>

    <Button
        android:id="@+id/participantChoiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/participant_choice" />

    <TextView
        android:id="@+id/selectedParticipantTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/selected_participant_hint" />

    <Button
        android:id="@+id/scheduleRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_register" />

</LinearLayout>